@@ -1,2 +1,3 @@
 [B]Version 1.1.17[/B]
 pornhub - fixed
+cam4 - Add Country and Language
